# anime-socialmedia-app

./: README.md  db.sqlite3  manage.py  notes.txt  pyproject.toml
linkedinClone/: asgi.py  settings.py  urls.py  wsgi.py
linkedin_app/: admin.py  forms.py  models.py  views.py
linkedin_app/migrations/: 0001_initial.py  0002_directmessage_message.py  0003_post_image.py  0004_message_seen.py  0005_directmessagebeta.py  0006_auto_20210714_1630.py
staticfiles/: style.css
templates/: 400.html  404.html  500.html  dm_view.html  genform.html  index.html  messagefeed.html  nav.html  not_found.html  profile_page.html
uploads/static/: style.css
uploads/static/uploads/: download_LQKPAK2.jfif
