[tool.poetry]
name = "capstone-proj"
version = "0.1.0"
description = ""
authors = ["MaxxOverDrive <codepro21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.1"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
